[tool.poetry]
name = "pixivdl"
version = "0.1.0"
description = ""
authors = ["Konosprod <konosprod@free.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
colorama = "0.4.6"
ffmpeg-python = "0.2.0"
future = "0.18.2"
idna = "3.4"
pillow = "9.3.0"
requests = "2.28.1"
tqdm = "4.64.1"
urllib3 = "1.26.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pixivdl = "pixivdl.main:main"
